testing/errors/test_variable_not_found.txts
IMPORT lib
IMPORT txts
VARIABLE txts.OUTPUT lib.nonexistent
